fix side-menu layout bug on PC

--- a/css/style.css
+++ b/css/style.css
@@ -163,28 +163,7 @@
   text-align: center;
 }
 
-/* ------------- PC Adjust Responsive */
-@media screen and (min-device-width: 600px) {
-  .bars {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-  .banner {
-    height: 70vh;
-  }
-  .cards {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-  .presentation {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-  }
-  .side-menu {
-    width: 30vw;
-  }
-}
+
 
 /* ------------- Preogress Bar */
 .progress {
@@ -192,7 +171,6 @@
   margin: 10px 20px 10px 20px;
   border-radius: 5px;
 }
-
 .progress .bar {
   border-radius: 5px;
   background-color: #FFF;
@@ -240,10 +218,36 @@
   padding-bottom: 80px;
   top: 0;
   transition-duration: 1s;
-  right: -500px;
+  right: -80vw;
   padding-top: 80px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   box-shadow: 0 0 5px rgba(255, 255, 255, 0.2);
+}
+
+/* ------------- PC Adjust Responsive */
+@media screen and (min-device-width: 600px) {
+  .bars {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .banner {
+    height: 70vh;
+  }
+  .cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .presentation {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+  }
+  .side-menu {
+    width: 30vw;
+  }
+  .side-menu .options .option a {
+    width: 30vw;
+  }
 }
